// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it returns the correct shape 1`] = `
Object {
  "addToCartButtonProps": Object {
    "disabled": true,
    "onClick": [Function],
  },
  "confirmRemovalIsOpen": false,
  "handleHideDialogs": [Function],
  "handleRemoveProductFromWishlist": [Function],
  "handleShowConfirmRemoval": [Function],
  "handleShowMoreActions": [Function],
  "hasError": false,
  "hasRemoveProductFromWishlistError": false,
  "imageProps": Object {
    "alt": "Shoggoth Shirt",
    "src": "https://example.com/media/shoggoth-shirt.jpg",
    "width": 400,
  },
  "isDeleting": false,
  "isInStock": true,
  "isRemovalInProgress": false,
  "isSupportedProductType": false,
  "moreActionsIsOpen": false,
}
`;

exports[`mutation passes options for configurable item 1`] = `
Object {
  "variables": Object {
    "cartId": "cart123",
    "cartItem": Object {
      "quantity": 1,
      "selected_options": Array [
        "value-uid-1",
      ],
      "sku": "shoggoth-shirt",
    },
  },
}
`;

exports[`mutation passes options for simple item 1`] = `
Object {
  "variables": Object {
    "cartId": "cart123",
    "cartItem": Object {
      "quantity": 1,
      "sku": "shoggoth-shirt",
    },
  },
}
`;
